:bug: Overflow long text
Add an wrap to avoid overflow in task items

--- a/src/components/Card/CardItem.css
+++ b/src/components/Card/CardItem.css
@@ -1,7 +1,7 @@
 .card__item {
 	min-height: 100%;
 
-	padding: 1em 1.3em;
+	padding: 1.5em 1.3em;
 
 	display: flex;
 	justify-content: space-between;
